fix: virtual list scroll-behavior: smooth must be used only on iOS

--- a/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
+++ b/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
@@ -3,6 +3,8 @@
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+}
+body.device-ios .virtual-list {
     scroll-behavior: smooth; /* This is absolutely required on iOS, otherwise you get tons of visual issues */
 }
 
